--- a/public/semester1.html
+++ b/public/semester1.html
@@ -62,7 +62,7 @@ bis: 40
 <td>
 von: 50
 <br>
-bis: 10
+bis: 5
 </td>
 </tr>
 </tr>
@@ -272,6 +272,36 @@ bis: 40
 </td>
 </tr>
 </tr>
+<tr>
+<th class='table-dark' colspan='4'>Datenbanken</th>
+</tr>
+<tr>
+<th class='col-1'>Level</th>
+<th class='col-5'>Ziele</th>
+<th class='col-5'>Instrumente</th>
+<th class='col-1'>Datum</th>
+<tr>
+<td>1</td>
+<td>
+<ul>
+<li>Datenbank als Dienst oder Container lokal installieren</li>
+<li>Benutzer verwalten</li>
+<li>Tabellen erstellen, Berechtigungen</li>
+<li>Einfache Queries per SQL</li>
+</ul>
+</td>
+<td>
+<ul>
+<li>https://www.codecademy.com/learn/learn-sql</li>
+</ul>
+</td>
+<td>
+von: 40
+<br>
+bis: 48
+</td>
+</tr>
+</tr>
 </table>
 <h2>Team- / Selbstorganisation</h2>
 <table class='table'>
@@ -337,7 +367,7 @@ bis: 40
 </tr>
 </tr>
 </table>
-<p>Erstellt am: 13.01.2020 08:20:54</p>
+<p>Erstellt am: 13.01.2020 09:30:07</p>
 </div>
 <div class='col-1'></div>
 </div>
